--- a/Translations/Translations.csv
+++ b/Translations/Translations.csv
@@ -1,4 +1,9 @@
 ﻿ID,ENGLISH,SPANISH
+category.Structures,Structures,Estructuras
+category.Decorations,Decorations,Decoraciones
+category.Activables,Activables,Accionables
+category.Traps,Traps,Trampas
+category.System,System,Sistema
 object.NONE,None,Ninguno
 object.GROUND,Ground,Suelo
 object.CYAN_GROUND,Cyan Ground,Suelo Cyan
@@ -32,7 +37,6 @@ object.SMALL_SCREEN,Small Screen,Pantalla Pequeña
 object.BREAKABLE_WINDOW,Breakable Window,Ventana Frágil
 object.TRIGGER,Trigger,Trigger
 Player,Player,Jugador
-,,
 events.WhenActivatingEvents,When Activating,Cuando Se Activa
 events.WhenDeactivatingEvents,When Deactivating,Cuando Se Desactiva
 events.WhenInvertingEvents,When Inverting,Cuando Se Invierte
