--- a/Translations/Translations.csv
+++ b/Translations/Translations.csv
@@ -1,4 +1,5 @@
 ﻿ID,ENGLISH,SPANISH
+LevelEditor,Level Editor,Editor de Niveles
 category.Structures,Structures,Estructuras
 category.Decorations,Decorations,Decoraciones
 category.Activables,Activables,Accionables
@@ -46,8 +47,12 @@ events.OnBoth,On Both,Ambos Casos
 events.OnEnter,On Enter,Al Entrar
 events.OnExit,On Exit,Al Salir
 tooltip.SetActiveAtStartToggle,Defines if the object will be [00FFFF]enabled[-] or [FF0000]not[-] at the beginning of the level.,Define si el objeto estará [00FFFF]activado[-] o [FF0000]no[-] al inicio del nivel.
+pause.PlayLevel,Play Level,Jugar Nivel
+pause.NoSpawnObject,There isn't any player spawn obj in the scene.,No hay ningún spawn del jugador en la escena.
+pause.SaveLevel,Save Level,Guardar Nivel
+pause.NoChanges,There are no changes to save.,No hay cambios para guardar.
 pause.ExitPopup.Title,Warning,Advertencia
-pause.ExitPopup.Content,"Warning, exiting will erase your last saved changes if you made any before saving, are you sure you want to continue?","Advertencia, al salir se van a elimiar los cambios que hayas hecho desde el último guardado, ¿estás seguro de que deseas continuar?"
+pause.ExitPopup.Content,"Warning, exiting now will delete any changes you have made since the last save. Are you sure you want to continue?","Advertencia, al salir se van a elimiar los cambios que hayas hecho desde el último guardado, ¿estás seguro de que deseas continuar?"
 pause.ExitPopup.Back,No,No
 pause.ExitPopup.SaveAndExit,Save And Exit,Salir Y Guardar
 pause.ExitPopup.ExitNoSave,Exit Without Saving,Salir Sin Guardar
