--- a/Translations/Translations.csv
+++ b/Translations/Translations.csv
@@ -61,12 +61,30 @@ Position,Position,Posición
 Rotation,Rotation,Rotación
 Scale,Scale,Escala
 Collision,Collision,Colisión
-,,
-,,
-,,
-,,
-,,
-,,
-,,
-,,
 tooltip.SetActiveAtStartToggle,Defines if the object will be [00FFFF]enabled[-] or [FF0000]not[-] at the beginning of the level.,Define si el objeto estará [00FFFF]activado[-] o [FF0000]no[-] al inicio del nivel.
+ColorHex,Color (Hex),Color (Hex)
+Intensity,Intensity,Intensidad
+Range,Range,Rango
+ActivateOnStart,Activate On Start,Activar Al Inicio
+Damage,Damage,Daño
+TravelBack,Travel Back,Regresarse
+AddWaypoint,+ Add Waypoint,+ Añadir Waypoint
+WaitTime,Wait Time,Tiempo de Espera
+InitialState,Initial State,Estado Inicial
+DEACTIVATED,DEACTIVATED,DESACTIVADO
+ACTIVATED,ACTIVATED,ACTIVADO
+UNUSABLE,UNUSABLE,UNUSABLE
+UsableOnce,Usable Once,Usable Una Vez
+CanBeShotByTaser,Can be shot by Taser,Puede ser activado por el Taser
+ManageEvents,Manage Events,Administrar Eventos
+RespawnTime,Respawn Time,Tiempo de Reaparición
+InstantKill,Instant Kill,Muerte Instantanea
+Constant,Constant,Constante
+OnlyOnce,Only Once,Una sola Vez
+ScreenColor,Screen Color,Color de la Pantalla
+CYAN,CYAN,CYAN
+GREEN,GREEN,VERDE
+RED,RED,ROJO
+InvisibleMesh,Invisible Mesh,Malla Invisible
+InvertTextWithGravity,Invert Text With Gravity,Invertir Texto Con La Gravedad
+EditText,Edit Text,Editar Texto
