--- a/Translations/Translations.csv
+++ b/Translations/Translations.csv
@@ -37,6 +37,7 @@ object.SCREEN,Screen,Pantalla
 object.SMALL_SCREEN,Small Screen,Pantalla Pequeña
 object.BREAKABLE_WINDOW,Breakable Window,Ventana Frágil
 object.TRIGGER,Trigger,Trigger
+object.DOOR,Door,Puerta
 Player,Player,Jugador
 events.WhenActivatingEvents,When Activating,Cuando Se Activa
 events.WhenDeactivatingEvents,When Deactivating,Cuando Se Desactiva
