Added Door V2 translation in the sheet.

--- a/Translations/Translations.csv
+++ b/Translations/Translations.csv
@@ -39,6 +39,7 @@ object.BREAKABLE_WINDOW,Breakable Window,Ventana Frágil
 object.TRIGGER,Trigger,Trigger
 object.DOOR,Door,Puerta
 object.LASER_FIELD,Laser Field,Campo Laser
+object.DOOR_V2,Door V2,Puerta V2
 Player,Player,Jugador
 events.WhenActivatingEvents,When Activating,Cuando Se Activa
 events.WhenDeactivatingEvents,When Deactivating,Cuando Se Desactiva
