--- a/Translations/Translations.csv
+++ b/Translations/Translations.csv
@@ -93,6 +93,7 @@ GREEN,GREEN,VERDE
 RED,RED,ROJO
 InvisibleMesh,Invisible Mesh,Malla Invisible
 InvertTextWithGravity,Invert Text With Gravity,Invertir Texto Con La Gravedad
+ScaledText,Scaled Text,Texto Escalado
 EditText,Edit Text,Editar Texto
 CurrentMode,[c][ffff00]Current Mode:[-][/c],[c][ffff00]Modo Actual:[-][/c]
 Building,Building,Construcción
