--- a/Translations/Translations.csv
+++ b/Translations/Translations.csv
@@ -42,6 +42,8 @@ object.LASER_FIELD,Laser Field,Campo Laser,Лазерне поле
 object.DOOR_V2,Door V2,Puerta V2,Двері V2
 object.DEATH_TRIGGER,Death Trigger,Trigger de Muerte,Трігер смерті
 object.WAYPOINT,Waypoint,Waypoint,
+object.JETPACK,Jetpack,,Ранець
+object.GUN,Taser,,Тазер
 Player,Player,Jugador,Гравець
 events.WhenActivatingEvents,When Activating,Cuando Se Activa,Коли активне
 events.WhenDeactivatingEvents,When Deactivating,Cuando Se Desactiva,Коли неактивне
@@ -51,6 +53,7 @@ events.OnRemove,On Remove,Cuando Se Remueve,Коли неактивне
 events.OnBoth,On Both,Ambos Casos,На обох
 events.OnEnter,On Enter,Al Entrar,При вході
 events.OnExit,On Exit,Al Salir,При виході
+events.OnPickup,On Pickup,,При піднятті
 pause.PlayLevel,Play Level,Jugar Nivel,Грати рівень
 pause.NoSpawnObject,There isn't any player spawn obj in the scene.,No hay ningún spawn del jugador en la escena.,В сцені немає точки появи гравця.
 pause.SaveLevel,Save Level,Guardar Nivel,Зберегти рівень
