--- a/Translations/Translations.csv
+++ b/Translations/Translations.csv
@@ -43,7 +43,6 @@ object.DOOR_V2,Door V2,Puerta V2,Двері V2
 object.DEATH_TRIGGER,Death Trigger,Trigger de Muerte,Трігер смерті
 object.WAYPOINT,Waypoint,Waypoint,
 object.JETPACK,Jetpack,,Ранець
-object.GUN,Taser,,Тазер
 Player,Player,Jugador,Гравець
 events.WhenActivatingEvents,When Activating,Cuando Se Activa,Коли активне
 events.WhenDeactivatingEvents,When Deactivating,Cuando Se Desactiva,Коли неактивне
@@ -123,3 +122,5 @@ DeathImminent,IMMINENT,INMINENTE,СМЕРТЬ
 Delay,Delay,Retraso,Затримка
 Rotate,Rotate?,,Повертати?
 RotateSpeed,Rotate speed,,Швидкість повертання
+Ammo,Ammo,,Патрони
+InfiniteTaser,Infinite Taser,,Бескінечний тазер
