--- a/Translations/Translations.csv
+++ b/Translations/Translations.csv
@@ -43,6 +43,8 @@ object.DOOR_V2,Door V2,Puerta V2,Двері V2
 object.DEATH_TRIGGER,Death Trigger,Trigger de Muerte,Трігер смерті
 object.WAYPOINT,Waypoint,Waypoint,
 object.JETPACK,Jetpack,,Ранець
+object.ARROW,Arrow,,Стрілка
+object.GUN,Taser,,Тазер
 Player,Player,Jugador,Гравець
 events.WhenActivatingEvents,When Activating,Cuando Se Activa,Коли активне
 events.WhenDeactivatingEvents,When Deactivating,Cuando Se Desactiva,Коли неактивне
